Initial commit for task 4